--- a/mkcluster/manifest.json
+++ b/mkcluster/manifest.json
@@ -10,7 +10,7 @@
   },
   "content_scripts":[
     {
-      "matches":["https://github.com/*"],
+      "matches":["https://github.com/*/*/pulls"],
       "js":["./content.js","./p5.js","./p5.dom.js"]
     }
   ],
