--- a/mkcluster/manifest.json
+++ b/mkcluster/manifest.json
@@ -10,13 +10,12 @@
   },
   "content_scripts":[
     {
-      "matches":["https://github.com/*/*/pulls"],
-      "js":["./content.js","./p5.js","./p5.dom.js"]
+      "matches":["https://github.com/*/*/pulls*"],
+      "js":["./content.js"]
     }
   ],
   // "background":{
   //   "scripts":["background.js"]
   // },
-  "content_security_policy": "script-src 'self' https://www.gstatic.com/ https://*.firebaseio.com https://www.googleapis.com; object-src 'self'; connect-src 'self' wss://*.firebaseio.com;",
-  "permissions": ["activeTab","webRequest","https://github.com/*/*/","storage"]
+  "permissions": ["webNavigation","activeTab","webRequest","https://github.com/*/*/","storage"]
 }
